# itmo-containers

./: .env  .gitignore  README.md  app.Dockerfile  bad.Dockerfile  docker-compose.yml  good.Dockerfile  good.Dockerfile.dockerignore  main.py  pyproject.toml  todo.yml
nextcloud/: nextcloud.yml  nextcloud_configmap.yml  nextcloud_secret.yml  pg_deployment.yml  pg_secret.yml
postgres/: pg_secret.yml
static/: index.html  template.html
templates/: todo.html
